--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -31,7 +31,7 @@
   <div class="row justify-content-between">
       <div class="col-5 align-self-start" style="margin-top:10%">
           <h1 style="color: #4B6574; font-weight: bold; ">About Us</h1>
-          <p>Lorem ipsum dolor sit amet, nisl sonet nam an. Cum in appetere intellegam, ne ius liber prompta aliquam. Regione blandit ancillae at pri, per cu libris inimicus. Meis scriptorem consequuntur mea et, in nam veniam repudiare, pri vide sonet referrentur no. Quod nullam numquam pro et. His et facilis intellegat.          </p>
+          <p>Hello! we are a non-profit student developed website created to make donating easier than ever. Since the covid-19 has emerged, people around the world has been struggling, especially financially. Our purpose is to make it easier for people willing to help to donate safely and efficiently. We hope to be on your service, and thank you for all the support.          </p>
       </div>
       <div class='col col-5'>
         <form action="" method="post">
