--- a/report/templates/report/report.html
+++ b/report/templates/report/report.html
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
+{% extends 'base.html' %}
+{% load static %}
 <html>
     <head>
-        <title>Report Issue</title>
+        {% block meta %}
+        <link rel="stylesheet" href="{% static 'report/style.css' %}">
+        <title>Report</title>
+        {% endblock meta %}
     </head>
 
     <body>
+        {% block content %}
+        <h1 style="color: #4B6574; font-weight: bold; ">Report Problems</h1>
         <form action="" method="POST">
             <table class="table">
                 <tbody>
-                    {{ form.as_table }}
                     <tr>
-                        <th></th>
+                        <td>
+                            {{ form.name }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            {{ form.description }}
+                        </td>
+                    </tr>
+                    <tr>
                         <td>
                             {% csrf_token %}
-                            <button class="btn btn-outline-primary" type="submit" name="Simpan">Simpan</button>
-                            <a class="btn btn-outline-danger" href="{% url 'report:report'%}" name="Cancel">Batal</a>
+                            <button class="btn btn-light" type="submit" name="Simpan">Submit</button>
                         </td>
                     </tr>
                 </tbody>
             </table>
         </form>
+        {% endblock %}
     </body>
 </html>
