--- a/pertanyaan/templates/pertanyaan/detail.html
+++ b/pertanyaan/templates/pertanyaan/detail.html
@@ -38,7 +38,7 @@
 
             <div class = "row align-items-center">
                 <div class='col-12'>
-                    <p style="font-size: small;">From : {{question.name}}</p>
+                    <p style="font-size: small;">From : {{question.user.username}}</p>
                 </div>
 
             </div>
