--- a/pertanyaan/templates/pertanyaan/pertanyaan.html
+++ b/pertanyaan/templates/pertanyaan/pertanyaan.html
@@ -17,6 +17,16 @@
         .btn:hover{
             background-color: #91B14C;
         }
+        .btn {
+            
+            background-color: #D1F5C5
+        }
+        .btn-block {
+            width: 90%;
+            margin:auto;
+
+            
+        }
 
     </style>
 
@@ -38,7 +48,7 @@
                         <span class="input-group-append">
                         <input class="form-control py-2" type="search" placeholder="Search..." id="example-search-input" name="search">
                         
-                            <button type="submit" class="btn btn-outline-secondary" type="button">Search </button>
+                            <button type="submit" class="btn btn-outline-secondary" type="button" name=search>Search </button>
                         </span>
 
                     </form>
@@ -61,6 +71,21 @@
                 </div>
             {% endif %}
 
+
+
+            <div class="row justify-content-center">
+                <div class='col'>
+                    <form action="" method="POST">
+                        {%csrf_token%}
+                        <button type="submit" class="btn btn-outline-secondary btn-block" type="button" name="addQuestion" value="add">Ask</button>
+                    </form>
+                    
+                </div>
+
+            </div>
+
         </div>
+
+
     </div>
 {% endblock content %}
