--- a/main/templates/main/donate.html
+++ b/main/templates/main/donate.html
@@ -9,6 +9,7 @@
 
   <div class="row justify-content-between">
       <div class="col-5 align-self-start" style="margin:3%">
+        {% if user.is_authenticated %}
         <h1 style="color: #4B6574; font-weight: bold; ">Donate Now...</h1>
         <form action="" method="POST">
             <table class="table">
@@ -47,6 +48,17 @@
                 </tbody>
             </table>
         </form>
+        {% else %}
+        <br>
+        <br>
+        <br>
+        <br>
+        <h1 style="color: #4B6574; font-weight: bold; margin-left: 30px ">Login to <br> Donate Now...</h1>
+        <br>
+        <div class="container mx-auto">
+            <a style="margin-bottom: 30px; margin-left: 30px" href="{% url 'userauth:login'%}" class="btn btn-light">Login Now</a>
+        </div>
+        {% endif %}
       </div>
       <div class="col-5 align-self-start" style="margin-top:15% ; margin-right:2%">
         <h3 style="color: #4B6574; font-weight: bold; ">How to Donate</h3>
