--- a/testi/templates/tampilanTesti.html
+++ b/testi/templates/tampilanTesti.html
@@ -94,6 +94,12 @@
                     <div class="card" style="width: 100%; margin-bottom: 10px;">
                         <div class="card-header" style="width: 100%;">
                             <div style="width: 100%;">
+                                {% if user.is_authenticated %}
+                                <a href="{% url 'testi:delete' itu.id %}" data-toggle="tooltip" data-placement="top" title="" data-original-title="Hapus">
+                                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash-fill" fill="red" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z"></path>
+                                    </svg>
+                                </a>
                                 <h3>
                                     <center><b>{{itu.nama}}</b>, <u>{{itu.institusi}}</u></center>
                                 </h3>
@@ -106,13 +112,26 @@
                                 </center>
                                 <p style="text-align: right;">{{itu.tanggal_testi}}</p>
                             </li>
-
-                        </ul>
+                            {%else%}
+                            <h3>
+                                <center><b>****</b>, <u>{{itu.institusi}}</u></center>
+                            </h3>
                     </div>
-                    {% endfor %}
                 </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        <center>
+                            <p>{{itu.testimoni}}</p>
+                        </center>
+                        <p style="text-align: right;">Time : mm/dd/yyyy</p>
+                    </li>
+                    {%endif%}
+                </ul>
             </div>
+            {% endfor %}
         </div>
+    </div>
+    </div>
     </div>
     <div class="Footer"><br><br></div>
 </body>
