--- a/report/templates/report/report.html
+++ b/report/templates/report/report.html
@@ -37,7 +37,7 @@
                 <br>
 
         <br>
-        <h1 style="color: #4B6574; font-weight: bold; margin-left: 30px ">Login to <br> Donate Now...</h1>
+        <h1 style="color: #4B6574; font-weight: bold; margin-left: 30px ">Login to <br> Report</h1>
         <br>
         <div class="container mx-auto">
             <a style="margin-bottom: 30px; margin-left: 30px" href="{% url 'userauth:login'%}" class="btn btn-light">Login Now</a>
