--- a/report/templates/report/report.html
+++ b/report/templates/report/report.html
@@ -11,7 +11,7 @@
 
     <body>
         {% block content %}
-        {% if user.is_authenticated %}
+       <!--{% if user.is_authenticated %}-->
         <h1 style="color: #4B6574; font-weight: bold; ">Report Problems</h1>
         <form action="" method="POST">
             <table class="table">
@@ -33,7 +33,7 @@
                         </td>
                     </tr>
                 </tbody>
-                {% else %}
+                <!--{% else %}
                 <br>
 
         <br>
@@ -42,7 +42,7 @@
         <div class="container mx-auto">
             <a style="margin-bottom: 30px; margin-left: 30px" href="{% url 'userauth:login'%}" class="btn btn-light">Login Now</a>
         </div>
-        {% endif %}
+        {% endif %}-->
 
             </table>
         </form>
