--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                     <a href="{% url 'pertanyaan:pertanyaan'%}">Questions</a>
                 </li>
                 <li>
-                  <a href="{% url 'donasi:institution'%}">Institution</a>
+                  <a href="{% url 'donasi:seeInstitution'%}">Institution</a>
                 </li>
                 <li>
                     <a href="{% url 'report:report'%}">Reports</a>
