[RED] API Views url

--- a/pertanyaan/templates/pertanyaan/pertanyaan.html
+++ b/pertanyaan/templates/pertanyaan/pertanyaan.html
@@ -47,10 +47,8 @@
                     <form action="" method="get">
                         <span class="input-group-append">
                         <input class="form-control py-2" type="search" placeholder="Search..." id="example-search-input" name="search">
-                        
-                            <button type="submit" class="btn btn-outline-secondary" type="button" name=search>Search </button>
+                            <button type="submit" class="btn btn-outline-secondary" type="button">Search </button>
                         </span>
-
                     </form>
                 </div>
               
