--- a/main/templates/main/donate.html
+++ b/main/templates/main/donate.html
@@ -59,12 +59,8 @@
         <br>
         <div class="container mx-auto">
             <a style="margin-bottom: 30px; margin-left: 30px" href="{% url 'userauth:login'%}" class="btn btn-light">Login Now </a>
+            <br><img class="pict" src="{% static 'img/1.png' %}">
         </div>
-        <div class="pups pu1">
-			<h1>Pop Up One</h1>
-			<p>Blah blah blah</p>
-			<p><a href="#" class="closePopUp">close</a></p>
-		</div>
         {% endif %}
       </div>
       <div class="col-5 align-self-start" style="margin-top:3% ; margin-right:2%">
@@ -94,8 +90,6 @@
               <p class="accordion__copy js-copy">You will need to <b>login</b> first to report a Problem. To report a problem, go to the <b>Report</b> on the navbar, click <b>"Reports"</b>, and fill in the box to ask the question. To submit, you will have to click <b>Submit</b>.</p>
             </div>
           </div>
-          
-          <img class="pict" src="{% static 'img/1.png' %}">
 
          
   </div>
